Fixing spacing on other screen sizes 2.0

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -476,10 +476,14 @@ footer {
 
     #landing, #contact, #projects, #about, #members {
         height: 100vh;
-   }
+    }
+    
+    #about {
+    padding-top: 110px;
+    }
 
-   #about, #members {
-    padding-top: 100px;
+    #members > .container {
+        width: 120vh;
     }
 
     .proj-title{
